--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ h2{
     padding: 15px;
     display: flexbox;
     text-align: center;
-    color: whitesmoke;
+    color: lightgray;
     text-shadow: grey 2px 1px;
 
 }
 
 blockquote{
 
-    text-shadow: white 2px 1px;
+    text-shadow:rgb(216, 216, 216) 2px 1px;
     font-family: monospace;
     font-size: 25px;
     margin: 30px;
@@ -51,6 +51,6 @@ img{
     
     width: 300px;
     height: 250px;
-    border-radius: 40%;
+    border-radius: 35%;
     border: gray 2px solid;
 }
